checkbox cutoff fix with 12px size

--- a/root/static/final.css
+++ b/root/static/final.css
@@ -53,3 +53,103 @@
   overflow: auto;
 }
 
+/* ------------------ Baseliner Bootstrap Overrides -----------------*/
+
+#boot {
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #333333;
+  background-color: #ffffff;
+}
+
+#boot .dashboard {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 11px;  
+}
+
+.x-tree-node div.forum-ct{
+    background:#eee url(/static/images/icons/cmp-bg.gif) repeat-x;
+    margin-top:1px;
+    border-top:1px solid #ddd;
+    border-bottom:1px solid #ccc;
+    padding-top:2px;
+    padding-bottom:1px;
+}
+.forum-ct .x-tree-node-icon {
+    display:none;
+}
+.forum-ct a span {
+    font-weight:bold;
+    color:#222;
+}
+.forum {
+    border:1px solid #fff;
+}
+
+.forum.default {
+    font-style: italic;
+}
+
+.forum.status a span {
+  text-transform:uppercase;
+  font-family:Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: xx-small;
+  font-weight:bolder;
+  color:#555;
+}
+
+.forum .x-tree-ec-icon {
+    display:none;
+}
+.icon-forum {
+    background-image:url(/static/images/icons/track.gif) !important;
+}
+
+.icon-no {
+    background-image:url('') !important;
+}
+
+.priority a span {
+    font-weight:bold;
+    color:green;
+}
+
+
+.styledCheckbox {
+    height: 13px;
+    width: 13px;
+    filter: alpha(opacity=0.0);
+    opacity: 0.0;
+    outline: 0;
+}
+
+.styledCheckboxWrap {
+    position: relative;
+    background-size: 12px;
+    background: url('/static/images/icons/checkboxes.gif') no-repeat top left;
+    margin: 3px;
+}
+
+.wrapChecked{ background-position: 0px -12px; }
+
+.wrapPartial{ background-position: 0px -24px; }
+
+.pruebafieldset fieldset { border: 4px solid ; }
+
+.pruebafieldset legend{ font-size: 35px; }
+
+
+
+/*
+.x-tree-selected {
+    border:1px dotted #a3bae9;
+    background:#DFE8F6;
+}
+.x-tree-node .x-tree-selected a span{
+    background:transparent;
+    color:#15428b;
+    font-weight:bold;
+}
+*/
